add_subdirectory(test_BN)
add_subdirectory(test_cert)
add_subdirectory(test_crypto)
add_subdirectory(test_ECDH)
add_subdirectory(test_EVP)
add_subdirectory(test_hash)
add_subdirectory(test_key)
add_subdirectory(test_libcurl)
add_subdirectory(test_multicast)
add_subdirectory(test_rsa)
add_subdirectory(test_rsautl)
add_subdirectory(test_tcp_nonblock)
add_subdirectory(test_tls)
add_subdirectory(test_xfrm)
#add_subdirectory(test_dbus)
#add_subdirectory(test_dbus2)
#add_subdirectory(test_dbus3)
add_subdirectory(test_dbus4)
add_subdirectory(test_mydbus)
add_subdirectory(test_timer)
